--- a/index.html
+++ b/index.html
@@ -45,11 +45,20 @@
       </div>
   
       <div class="div4">
-        <h3>Create and schedule content quicker.</h3>
+        <h1>Create and schedule content <span class="highlight1">quicker.</span></h1>
+        <img src="./assets/images/illustration-create-post.webp" alt="">
+        <style>
+          .highlight1 {
+            color: #a600dd;
+            font-style: italic;
+          }
+          
+        </style>
       </div>
   
       <div class="div5">
-        <h4>Write your content using AI.</h4>
+        <h1>Write your content using AI.</h1>
+        <img src="./assets/images/illustration-ai-content.webp" alt="">
       </div>
   
       <div class="div6">
@@ -61,13 +70,14 @@
       <div class="div8">
         <h2>>56%</h2>
         <p>faster audience growth</p>
+        <img src="./assets/images/illustration-audience-growth.webp" alt="">
       </div>
     </div>
   </div>
-
+<!-- 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
